--script not working

--- a/ef-duo-dark.yaml
+++ b/ef-duo-dark.yaml
@@ -1,18 +1,18 @@
 scheme: "ef-duo-dark"
 author: "protesilaos"
-base00: "0F0B15"
-base01: "807C9F"
-base02: "00474F"
-base03: "C0A38A"
-base04: "5F1F5F"
-base05: "B8C6D5"
-base06: "807C9F"
-base07: "1D202F"
-base08: "6A9FFF"
-base09: "D369AF"
-base0A: "4FBAEF"
-base0B: "DF9080"
-base0C: "29A444"
-base0D: "35AFBF"
-base0E: "AF85EA"
-base0F: "FF6A7A"
+base00: "352718"
+base01: "90918A"
+base02: "60518F"
+base03: "EAB780"
+base04: "704F00"
+base05: "E8E4B1"
+base06: "90918A"
+base07: "483426"
+base08: "6FCAD0"
+base09: "98BFFF"
+base0A: "65D590"
+base0B: "FFA21F"
+base0C: "6FD560"
+base0D: "6FD560"
+base0E: "E4B53F"
+base0F: "FF7F4F"
